Fix layout to make it work on mobile

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,1 +1,3 @@
-$teamColor: #E4B94F;
+$team-gold: #E4B94F;
+$team-black: #000000;
+$navbar-logo-height: 30px;
