--- a/css/index.scss
+++ b/css/index.scss
@@ -7,6 +7,8 @@
 body, html {
     height: 100%;
 }
+
+// For setting cover background
 .site-wrapper { 
     /* The image used */
     background-image: 
@@ -26,35 +28,45 @@ body, html {
     color: $white;
 }
 
-.navbar-nav > li > a {
-  line-height: 30px;
-}
-
-.navbar {
-  height: 10%;
-}
-
-.navbar .nav {
-  padding: .25rem 0;
-  font-weight: bold;
-  font-size: 20px;
-  color: $white;
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
-}
-
 #mainButton {
-  background-color: $teamColor;
+  background-color: $team-gold;
   border: 0px;
   color: $gray-700;
 }
 
+.site-wrapper-inner {
+  vertical-align: middle !important;
+}
+
+// navbar stuff
+
+.navbar {
+  
+  font-weight: bold;
+
+  @include media-breakpoint-up(lg) {
+    background-color: transparent !important;
+    height: $navbar-logo-height;
+    margin-top: $navbar-logo-height;
+    border: 0;
+  }
+  
+}
+
 .nav-link {
   color: $white !important;
+
+}
+
+.nav-item {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .center-fix {
   position: relative;
-  margin-top: 2.25%;
-  margin-left: 40%;
+}
+
+.navbar-logo {
+  height: $navbar-logo-height;
 }
